# m3-llm-workshop

./: 00-fill-mask-sentiment-detection.ipynb  01-preparation.ipynb  02-bert-classification-EuroBERT.ipynb  02-bert-classification.ipynb  03-svm.ipynb  10-data-text-preparation.ipynb  11-similarity-embeddings.ipynb  12-sbert-finetune.ipynb  12-similarity-cross-encoder.ipynb  12-similarity-vectordb.ipynb  13-similarity-cross-encoder.ipynb  14-create-sbert-data-qwen-reranker.ipynb  15-sbert-finetune-qwen-reranker.ipynb  21-mistral.ipynb  21-similarity-tantivy.ipynb  21a-mistral.ipynb  21a-qwen-7b.ipynb  21a-qwen2.5-7b.ipynb  21a-qwen3-8b.ipynb  21b-qwen-7b.ipynb  21b-qwen2.5-7b.ipynb  21b-qwen3-8b.ipynb  21c-mistral-german.ipynb  22-GPTQ.ipynb  22-qwen-7b-gptq.ipynb  22-qwen3-8b-awq.ipynb  22-similarity-rrf.ipynb  23-AWQ.ipynb  23-qwen-7b-awq.ipynb  23-qwen3-8b-exl2.ipynb  23-similarity-cross-encoder.ipynb  24-ExLllamaV2.ipynb  24-qwen-7b-exl2.ipynb  24-qwen-8b-stream-exl2.ipynb  31-Axolotl.ipynb  31-sbert-finetune.ipynb  31a-qwen2-05-full-finetune.ipynb  31a-qwen3-06-full-finetune.ipynb  31b-qwen2-05.ipynb  31b-qwen3-06.ipynb  (+29 more)
un/TXT/Session 78 - 2023/: AGO_78_2023.txt  ALB_78_2023.txt  AND_78_2023.txt  ARE_78_2023.txt  ARG_78_2023.txt  ARM_78_2023.txt  ATG_78_2023.txt  AUS_78_2023.txt  AUT_78_2023.txt  AZE_78_2023.txt  BDI_78_2023.txt  BEL_78_2023.txt  BEN_78_2023.txt  BFA_78_2023.txt  BGD_78_2023.txt  BGR_78_2023.txt  BHR_78_2023.txt  BHS_78_2023.txt  BIH_78_2023.txt  BLR_78_2023.txt  BLZ_78_2023.txt  BOL_78_2023.txt  BRA_78_2023.txt  BRB_78_2023.txt  BRN_78_2023.txt  BTN_78_2023.txt  BWA_78_2023.txt  CAF_78_2023.txt  CAN_78_2023.txt  CHE_78_2023.txt  CHL_78_2023.txt  CHN_78_2023.txt  CIV_78_2023.txt  CMR_78_2023.txt  COD_78_2023.txt  COG_78_2023.txt  COL_78_2023.txt  COM_78_2023.txt  CPV_78_2023.txt  CRI_78_2023.txt  (+149 more)
