[project]
name = "finetuning-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bitsandbytes>=0.47.0",
    "flash-attn>=2.8.3",
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "liger-kernel>=0.6.2",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "peft>=0.17.1",
    "sentence-transformers>=5.1.1",
    "tqdm>=4.67.1",
    "transformers>=4.56.2",
    "trl>=0.23.0",
    "unsloth>=2025.9.5",
]
